Update header text with detailed information1

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-"<h1>Hola desde first_feature!</h1>" 
+"<h1>Hola, alfredo colmenares fue una persona que fue asesinada y encontrada en la alcantarilla de los rios de Bogota aproximadamente el 31 de octubre de 2019, su familia todavia sigue buscando el responsable porque el caso todavia no ha sido cerrado</h1>" 
